[package]
name = "core"
version = "0.1.0"
authors = ["Casper Rogild Storm"]
edition = "2018"

[dependencies]
isahc = { git = "https://github.com/sagebind/isahc", branch = "master", features = ["json", "rustls-tls", "rustls-tls-native-certs"] }
thiserror = "1.0"
async-trait = "0.1.50"
async-std = "1.9.0"
futures = "0.3.15"
serde = { version = "1.0", features = [ 'derive' ]}
serde_json = "1.0.64"
regex = "1.5.4"